fixed width to avoid cards cutting off

--- a/src/global.scss
+++ b/src/global.scss
@@ -23,7 +23,7 @@
 ion-card{
   height: 100%;
   max-height: 100vh;
-  max-width: 82vw;
+  max-width: 81vw;
 }
 
 ion-note{
